actualizacion de mi archivo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>este curso para aprender Git</p>
     <di>hola</di>
     <img src="downloag.jpeg" alt="nueva imagen">
+    <h3> esta es un recuerdo</h3>
     
 </body>
 </html>
