--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <di>hola</di>
     <img src="downloag.jpeg" alt="nueva imagen">
     <h3> esta es un recuerdo</h3>
+    <a href="page/equipo.html">mi equipo html</a>
     
 </body>
 </html>
