--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <img src="downloag.jpeg" alt="nueva imagen">
     <h3> esta es un recuerdo</h3>
     <a href="page/equipo.html">mi equipo html</a>
+    <p>hola mundo</p>
     
 </body>
 </html>
