agregamos opcion en index y readme para la rama master

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h3> esta es un recuerdo</h3>
     <a href="page/equipo.html">mi equipo html</a>
     <p>hola mundo</p>
+    <div>
+        <h1>estamos en la rama master</h1>
+    </div>
     
 </body>
 </html>
