--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div>
 
         <h1>estamos en la rama master</h1>
-        <span> mi edicion</span>
+        <span> mi edicion</span>\
+        <h1>como esta mi vida
+            
+        </h1>
 
 
     </div>
